# Background-Embedding-Memory

./: .gitignore  README.md  grid_search_bem_llvip.py  pyproject.toml  requirements.txt  requirements2.txt  run_llvip.py
scripts/: download_llvip.py
src/bem/: __init__.py  background.py  dataset.py  eval.py  model_wrappers.py  scoring.py
