[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bem-rrpr"
version = "0.1.0"
description = "RRPR reproducibility code for Background Embedding Memory (BEM)."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "ultralytics>=8.3",
  "opencv-python>=4.8",
  "numpy>=1.23",
  "pandas>=2.0",
  "tqdm>=4.66",
  "huggingface_hub>=0.20",
  "gdown>=5.0",
  "py7zr>=0.20"
]

[tool.setuptools.packages.find]
where = ["src"]
